# quote_collection

./: README.md  package-lock.json
backend/: .env.dev  .gitignore  app.db  main.py  main_mock.py  pyproject.toml  requirements.txt  run_tests.sh  test.html
backend/alembic/: env.py
backend/alembic/versions/: 65cc0f05938b_initial_migration.py
backend/app/: database.py  main.py
backend/app/core/: auth.py  config.py
backend/app/models/: __init__.py  book.py  bookmark.py  like.py  movie.py  producer.py  publisher.py  quote.py  quote_tag.py  source.py  tag.py  user.py
backend/app/repositories/: __init__.py  base.py  movie.py  quote.py  quote_tag.py  source.py  tag.py
backend/app/routers/: __init__.py  auth.py  auth_mock.py  book.py  bookmark.py  like.py  movie.py  producer.py  publisher.py  quote.py  quote_tag.py  source.py  tag.py
backend/app/schemas/: __init__.py  book.py  bookmark.py  like.py  movie.py  producer.py  quote.py  source.py  tag.py  user.py  user_simple.py
backend/app/services/: __init__.py  quote.py  source.py
backend/tests/: test_quote_router.py  test_schemas.py
frontend/: README.md  index.html  package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/components/: FolderNode.jsx  LoginInput.jsx  SigninInput.jsx
frontend/src/components/Logo/: index.jsx
frontend/src/components/MyNavBar/: index.jsx
frontend/src/components/NavBar/: index.jsx
frontend/src/components/Search/: index.jsx
frontend/src/pages/: SigninInput.jsx
frontend/src/pages/Bookmark/: index.jsx
frontend/src/pages/Detail/: index.jsx
(+27 files in other folders)
