[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "asyncmy>=0.2.10",
    "bcrypt>=4.3.0",
    "cryptography>=46.0.1",
    "email-validator>=2.3.0",
    "fastapi>=0.116.2",
    "jose>=1.0.0",
    "passlib>=1.7.4",
    "pydantic>=2.11.9",
    "pydantic-core>=2.33.2",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.2",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]
